--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,7 +1,12 @@
 .formPart{
-    margin: 10vh 10vw 0 10vw;
+    margin: 10vh 10vw 10vh 10vw;
     height: 905h;
-    padding: 10vh 5vh 0 5vh;
+    padding: 10vh 5vh 2vh 5vh;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-    
+}
+
+.errorMessage{
+    color:red;
+    font-size: 15px;
+    margin:0 0 15px 20px;
 }
